WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109886
Crash occurs at WebCore::TextTrackList::length() when enabling closed captions in movie
https://bugs.webkit.org/show_bug.cgi?id=109886
Summary
Crash occurs at WebCore::TextTrackList::length() when enabling closed caption...
Chris Petersen
Reported
2013-02-14 21:05:06 PST
Crash occurs at WebCore::TextTrackList::length() when enabling closed captions in movie 1) Launch Webkit
r142952
2) Go to
http://www.apple.com/apple-events/october-2012/
3) Click on close caption icon on toolbar 4) Crash occurs
Attachments
crash log
(67.27 KB, text/plain)
2013-02-14 21:07 PST
,
Chris Petersen
no flags
Details
Proposed patch
(2.69 KB, patch)
2013-02-15 09:42 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2013-02-14 21:07:45 PST
Created
attachment 188476
[details]
crash log
Radar WebKit Bug Importer
Comment 2
2013-02-14 22:58:32 PST
<
rdar://problem/13222534
>
Eric Carlson
Comment 3
2013-02-15 09:42:44 PST
Created
attachment 188588
[details]
Proposed patch
Eric Carlson
Comment 4
2013-02-15 09:43:06 PST
(In reply to
comment #0
)
> Crash occurs at WebCore::TextTrackList::length() when enabling closed captions in movie > > > 1) Launch Webkit
r142952
> 2) Go to
http://www.apple.com/apple-events/october-2012/
> 3) Click on close caption icon on toolbar > 4) Crash occurs
Thanks for the report Chris!
Eric Carlson
Comment 5
2013-02-15 11:18:21 PST
Committed in
http://trac.webkit.org/r143021
Eric Carlson
Comment 6
2013-02-15 11:19:37 PST
***
Bug 109869
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug