Crash occurs at WebCore::TextTrackList::length() when enabling closed captions in movie https://bugs.webkit.org/show_bug.cgi?id=109886

Reviewed by Dean Jackson.

Source/WebCore:

No new tests, media/media-captions.html does not crash with this change.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::markCaptionAndSubtitleTracksAsUnconfigured): Early return when
    m_textTracks is NULL.

LayoutTests:

* platform/mac/TestExpectations: Remove media/media-captions.html.


Canonical link: https://commits.webkit.org/128236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143021 268f45cc-cd09-0410-ab3c-d52691b4dbfc